# navis-hackathon-20

./: README.md  entry.py  pyproject.toml
navis_map_hack/: __init__.py  app.py  callback.py  data.py  map.py  test_data.py
navis_map_hack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_navis_map_hack.py
